[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]

[dependencies.snafu]
version = "*"

[dependencies.rand]
version = "*"

[dependencies.rand_pcg]
version = "*"

[dependencies.packer]
version = "*"