[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["media_layer_sdl2"]
media_layer_sdl2 = []
media_layer_text = []

[lib]
name = "minesweeperlib"
path = "src/lib.rs"
#proc-macro = true

[[bin]]
name = "minesweeper"
path = "src/main.rs"

[dependencies]
snafu = "*"
rand = "*"
rand_pcg = "*"
packer = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]
