[package]
name = "minesweeper"
version = "0.1.0"
authors = ["Bruce Brown <bruce_brown_1207@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["media_layer_wasm"]
media_layer_sdl2 = ["sdl2"]
media_layer_wasm = ["web-sys", "js-sys", "wasm-bindgen", "image"]
media_layer_text = []

[lib]
name = "minesweeperlib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "minesweeper"
path = "src/main.rs"

[dependencies]
snafu = "0.6.8"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
packer = { version = "0.5.3", features = ["always_pack"] }

wasm-bindgen = { version = "0.2.67", optional = true }
js-sys = { version = "0.3.43", optional = true }
image = { version = "0.23.8", optional = true }

[dependencies.sdl2]
version = "0.34.2"
optional = true
default-features = false
features = ["image","unsafe_textures"]

[dependencies.web-sys]
version = "0.3.44"
optional = true
features = [
    "console",
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "ImageData",
    "MouseEvent",
    "Node",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"